--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>WebStudio</title>
+    <title>Perfect Rest</title>
 
     <link
       rel="stylesheet"
@@ -22,12 +22,14 @@
       <div class="container header-container">
         <nav class="header-nav">
           <a href="./index.html" class="logo"
-            >Web<span class="logo-link">Studio</span></a
+            >Perfect<span class="logo-link">Rest</span></a
           >
 
           <ul class="site-nav">
-            <li><a href="./index.html" class="link current">Studio</a></li>
-            <li><a href="" class="link">Portfolio</a></li>
+            <li>
+              <a href="./index.html" class="link current"><main></main></a>
+            </li>
+            <li><a href="" class="link">About fishing</a></li>
             <li><a href="" class="link">Contacts</a></li>
           </ul>
         </nav>
@@ -35,7 +37,7 @@
           <ul class="contact-list">
             <li>
               <a href="mailto:info@devstudio.com" class="contact"
-                >info@devstudio.com</a
+                >info@top-rest.com</a
               >
             </li>
             <li>
@@ -55,8 +57,10 @@
     <main>
       <section class="main-page">
         <div class="container hero">
-          <h1 class="title-text">Effective Solutions for Your Business</h1>
-          <button type="button" class="button">Order Service</button>
+          <h1 class="title-text">
+            Discover Fishing as a Perfect Leisure Activity
+          </h1>
+          <button type="button" class="button">Just try</button>
         </div>
       </section>
       <section class="features">
@@ -69,10 +73,12 @@
                   <use href="./images/icons.svg#icon-antenna"></use>
                 </svg>
               </div>
-              <h3 class="features-descr">Strategy</h3>
+              <h3 class="features-descr">Preserve Nature</h3>
               <p class="descr">
-                Our goal is to identify the business problem to walk away with
-                the perfect and creative solution.
+                When fishing, it’s important to follow ecological responsibility
+                principles. Pack up all trash and avoid leaving fishing tackle
+                remnants, plastic bottles, or other waste. Always clean up after
+                yourself to keep nature clean.
               </p>
             </li>
             <li class="features-list-item">
@@ -81,10 +87,12 @@
                   <use href="./images/icons.svg#icon-clock"></use>
                 </svg>
               </div>
-              <h3 class="features-descr">Punctuality</h3>
+              <h3 class="features-descr">Follow Local Fishing Regulations</h3>
               <p class="descr">
-                Bring the key message to the brand's audience for the best price
-                within the shortest possible time.
+                Every fishing spot may have its own restrictions regarding the
+                season, allowed fish species, and catch limits. Make sure you
+                are familiar with local laws and regulations to fish responsibly
+                and within legal boundaries.
               </p>
             </li>
             <li class="features-list-item">
@@ -94,10 +102,12 @@
                 </svg>
               </div>
 
-              <h3 class="features-descr">Diligence</h3>
+              <h3 class="features-descr">Practice Humane Handling of Fish</h3>
               <p class="descr">
-                Research and confirm brands that present the strongest digital
-                growth opportunities and minimize risk.
+                If you plan to catch fish, it is recommended to use techniques
+                that minimize stress on the fish. If you do not intend to keep
+                the fish, try to release it back into the water as gently as
+                possible.
               </p>
             </li>
             <li class="features-list-item">
@@ -106,10 +116,11 @@
                   <use href="./images/icons.svg#icon-astronaut"></use>
                 </svg>
               </div>
-              <h3 class="features-descr">Technologies</h3>
+              <h3 class="features-descr">Don’t Overburden Natural Resources</h3>
               <p class="descr">
-                Design practice focused on digital experiences. We bring forth a
-                deep passion for problem-solving.
+                Avoid overfishing to prevent disrupting the natural balance of
+                aquatic ecosystems. Fishing should be moderate to ensure the
+                sustainability of fish populations in the waters.
               </p>
             </li>
           </ul>
