--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <li>
               <a href="./index.html" class="link current"><main></main></a>
             </li>
-            <li><a href="" class="link">About fishing</a></li>
+            <li><a href="" class="link">About Lake</a></li>
             <li><a href="" class="link">Contacts</a></li>
           </ul>
         </nav>
@@ -56,10 +56,20 @@
     </header>
     <main>
       <section class="main-page">
+        <ul class="bubbles">
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+        </ul>
         <div class="container hero">
-          <h1 class="title-text">
-            Discover Fishing as a Perfect Leisure Activity
-          </h1>
+          <h1 class="title-text">Discover Fishing at Silver Lake</h1>
           <button type="button" class="button">Just try</button>
         </div>
       </section>
@@ -70,7 +80,7 @@
             <li class="features-list-item">
               <div class="icons-features">
                 <svg class="icon" width="64" height="64">
-                  <use href="./images/icons.svg#icon-antenna"></use>
+                  <use href=""></use>
                 </svg>
               </div>
               <h3 class="features-descr">Preserve Nature</h3>
@@ -84,7 +94,7 @@
             <li class="features-list-item">
               <div class="icons-features">
                 <svg class="icon" width="64" height="64">
-                  <use href="./images/icons.svg#icon-clock"></use>
+                  <use href=""></use>
                 </svg>
               </div>
               <h3 class="features-descr">Follow Local Fishing Regulations</h3>
@@ -98,7 +108,7 @@
             <li class="features-list-item">
               <div class="icons-features">
                 <svg class="icon" width="64" height="64">
-                  <use href="./images/icons.svg#icon-diagram"></use>
+                  <use href=""></use>
                 </svg>
               </div>
 
@@ -113,7 +123,7 @@
             <li class="features-list-item">
               <div class="icons-features">
                 <svg class="icon" width="64" height="64">
-                  <use href="./images/icons.svg#icon-astronaut"></use>
+                  <use href=""></use>
                 </svg>
               </div>
               <h3 class="features-descr">Don’t Overburden Natural Resources</h3>
@@ -128,7 +138,7 @@
       </section>
       <section class="team">
         <div class="container our-team">
-          <h2 class="team-page">Our Team</h2>
+          <h2 class="team-page">Let's introduce ourselves</h2>
           <ul class="work-list">
             <li class="work-gallery">
               <img
@@ -143,7 +153,7 @@
               />
               <div class="membership">
                 <h3 class="workers">Mark Guerrero</h3>
-                <p class="position">Product Designer</p>
+                <p class="position">Owner</p>
 
                 <ul class="workers-links">
                   <li class="icons-sm-workers">
@@ -198,7 +208,7 @@
               />
               <div class="membership">
                 <h3 class="workers">Tom Ford</h3>
-                <p class="position">Frontend Developer</p>
+                <p class="position">Chief Selector</p>
                 <ul class="workers-links">
                   <li class="icons-sm-workers">
                     <a
@@ -252,7 +262,7 @@
               />
               <div class="membership">
                 <h3 class="workers">Camila Garcia</h3>
-                <p class="position">Marketing</p>
+                <p class="position">Manager</p>
                 <ul class="workers-links">
                   <li class="icons-sm-workers">
                     <a
@@ -301,7 +311,7 @@
               />
               <div class="membership">
                 <h3 class="workers">Daniel Wilson</h3>
-                <p class="position">UI Designer</p>
+                <p class="position">Guard-manager</p>
                 <ul class="workers-links">
                   <li class="icons-sm-workers">
                     <a
@@ -348,7 +358,7 @@
       </section>
       <section class="about-prod">
         <div class="container portfolio-contain">
-          <h2 class="portfolio">Our Portfolio</h2>
+          <h2 class="portfolio">Fishing Regulations</h2>
           <ul class="prod-list">
             <li class="img-prod">
               <div class="box">
